correction chemin CSS pour gtb

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page 5 Sections</title>
-  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
 </head>
 <body>
     <nav>
@@ -66,19 +66,19 @@
   </section>
   <section class="beige1">
     <div>
-        <img src="/public/img/Logo-logo.png" alt="">
+        <img src="public/img/Logo-logo.png" alt="">
         <p>Logo</p>
     </div>
     <div>
-        <img src="/public/img/icon-charte-graphic.png" alt="">
+        <img src="public/img/icon-charte-graphic.png" alt="">
         <p>Charte graphique</p>
     </div>
     <div>
-        <img src="/public/img/site-single-page.png" alt="">
+        <img src="public/img/site-single-page.png" alt="">
         <p>Site single page</p>
     </div>
     <div>
-        <img src="/public/img/carte-visite.png" alt="">
+        <img src="public/img/carte-visite.png" alt="">
         <p>Carte de visite</p>
     </div>
   </section>
@@ -100,25 +100,25 @@
   <section class="beige2">
     <div>
         <div>
-            <img src="/public/img/Logo-logo.png" alt="">
+            <img src="public/img/Logo-logo.png" alt="">
             <p>Logo</p>
         </div>
         <div>
-            <img src="/public/img/icon-charte-graphic.png" alt="">
+            <img src="public/img/icon-charte-graphic.png" alt="">
             <p>Charte graphique</p>
         </div>
         <div>
-            <img src="/public/img/site-vitrine.png" alt="">
+            <img src="public/img/site-vitrine.png" alt="">
             <p>Site vitrine</p>
         </div>
         <div>
-            <img src="/public/img/reseaux-sociaux.png" alt="">
+            <img src="public/img/reseaux-sociaux.png" alt="">
             <p>Réseaux sociaux</p>
         </div>
     </div>
     <div>
         <div>
-            <img src="/public/img/carte-visite.png" alt="">
+            <img src="public/img/carte-visite.png" alt="">
             <p>Carte de visite</p>
         </div>
     </div>
@@ -140,19 +140,19 @@
   </section>
   <section class="beige3">
     <div>
-        <img src="/public/img/icon-analyse-flux-web.png" alt="">
+        <img src="public/img/icon-analyse-flux-web.png" alt="">
         <p>Analyse du flux web</p>
     </div>
     <div>
-        <img src="/public/img/icon-campagne-facebook.png" alt="">
+        <img src="public/img/icon-campagne-facebook.png" alt="">
         <p>Campagne Facebook</p>
     </div>
     <div>
-        <img src="/public/img/icon-campagne-adwords.png" alt="">
+        <img src="public/img/icon-campagne-adwords.png" alt="">
         <p>Campagne Adwords</p>
     </div>
     <div>
-        <img src="/public/img/icon-campagne-e-mailing.png" alt="">
+        <img src="public/img/icon-campagne-e-mailing.png" alt="">
         <p>Campagne e-mailing</p>
     </div>
   </section>
